project('emmyluacodestyle', ['c', 'cpp'], version: '1.7.3', default_options: ['cpp_std=c++20'])

uri_inc = include_directories('3rd/uriparser/include', '3rd/uriparser/src')
uri_sources = files(
    '3rd/uriparser/src/UriCommon.c',
    '3rd/uriparser/src/UriCompare.c',
    '3rd/uriparser/src/UriEscape.c',
    '3rd/uriparser/src/UriFile.c',
    '3rd/uriparser/src/UriIp4Base.c',
    '3rd/uriparser/src/UriIp4.c',
    '3rd/uriparser/src/UriMemory.c',
    '3rd/uriparser/src/UriNormalizeBase.c',
    '3rd/uriparser/src/UriNormalize.c',
    '3rd/uriparser/src/UriParseBase.c',
    '3rd/uriparser/src/UriParse.c',
    '3rd/uriparser/src/UriQuery.c',
    '3rd/uriparser/src/UriRecompose.c',
    '3rd/uriparser/src/UriResolve.c',
    '3rd/uriparser/src/UriShorten.c',
)
uri_lib = static_library(
    'emmy_uri',
    uri_sources,
    include_directories: uri_inc,
    c_args: ['-DURI_LIBRARY_BUILD', '-DURI_STATIC_BUILD'],
    override_options: ['unity=off'],
    pic: true,
)

emmy_inc = include_directories(
    'CodeFormatCLib/include',
    'CodeFormatCLib/src',
    'CodeFormatCore/include',
    'CodeFormatCore/src',
    'LuaParser/include',
    'LuaParser/src',
    'Util/include',
    'Util/src',
    '3rd/uriparser/include',
    '3rd/wildcards/include',
)
emmy_sources = files(
    'CodeFormatCLib/src/CodeFormatCLib.cpp',
    'CodeFormatCLib/src/CodeFormat.cpp',
    'CodeFormatCore/src/Config/FunctionOption.cpp',
    'CodeFormatCore/src/Config/LuaStyle.cpp',
    'CodeFormatCore/src/Config/LuaEditorConfig.cpp',
    'CodeFormatCore/src/Config/LuaDiagnosticStyle.cpp',
    'CodeFormatCore/src/Config/LanguageTranslator.cpp',
    'CodeFormatCore/src/Config/EditorconfigPattern.cpp',
    'CodeFormatCore/src/Format/FormatBuilder.cpp',
    'CodeFormatCore/src/Format/FormatState.cpp',
    'CodeFormatCore/src/Format/Analyzer/FormatAnalyzer.cpp',
    'CodeFormatCore/src/Format/Analyzer/SpaceAnalyzer.cpp',
    'CodeFormatCore/src/Format/Analyzer/IndentationAnalyzer.cpp',
    'CodeFormatCore/src/Format/Analyzer/LineBreakAnalyzer.cpp',
    'CodeFormatCore/src/Format/Analyzer/FormatDocAnalyze.cpp',
    'CodeFormatCore/src/Format/Analyzer/AlignAnalyzer.cpp',
    'CodeFormatCore/src/Format/Analyzer/TokenAnalyzer.cpp',
    'CodeFormatCore/src/Format/Analyzer/SemicolonAnalyzer.cpp',
    'CodeFormatCore/src/Format/Analyzer/FormatResolve.cpp',
    'CodeFormatCore/src/Format/Analyzer/SyntaxNodeHelper.cpp',
    'CodeFormatCore/src/RangeFormat/RangeFormatBuilder.cpp',
    'CodeFormatCore/src/TypeFormat/LuaTypeFormat.cpp',
    'CodeFormatCore/src/TypeFormat/LuaTypeFormatFeatures.cpp',
    'CodeFormatCore/src/Diagnostic/DiagnosticBuilder.cpp',
    'CodeFormatCore/src/Diagnostic/NameStyle/NameStyleChecker.cpp',
    'CodeFormatCore/src/Diagnostic/NameStyle/NameStyleRuleMatcher.cpp',
    'CodeFormatCore/src/Diagnostic/Spell/CodeSpellChecker.cpp',
    'CodeFormatCore/src/Diagnostic/Spell/Util.cpp',
    'CodeFormatCore/src/Diagnostic/CodeStyle/CodeStyleChecker.cpp',
    'LuaParser/src/Parse/LuaParser.cpp',
    'LuaParser/src/Parse/Mark.cpp',
    'LuaParser/src/Lexer/LuaLexer.cpp',
    'LuaParser/src/Lexer/LuaIdentify.cpp',
    'LuaParser/src/Lexer/TextReader.cpp',
    'LuaParser/src/Ast/LuaSyntaxNode.cpp',
    'LuaParser/src/Ast/LuaSyntaxTree.cpp',
    'LuaParser/src/Ast/LuaSyntaxMultiKind.cpp',
    'LuaParser/src/Ast/LuaSyntaxNodeKind.cpp',
    'LuaParser/src/Types/TextRange.cpp',
    'LuaParser/src/File/LuaSource.cpp',
    'LuaParser/src/exception/LuaParseException.cpp',
    'Util/src/CommandLine.cpp',
    'Util/src/StringUtil.cpp',
    'Util/src/Utf8.cpp',
    'Util/src/Url.cpp',
    'Util/src/FileFinder.cpp',
    'Util/src/SymSpell/SymSpell.cpp',
    'Util/src/SymSpell/SuggestItem.cpp',
    'Util/src/SymSpell/EditDistance.cpp',
    'Util/src/InfoTree/InfoTree.cpp',
    'Util/src/InfoTree/InfoNode.cpp',
)
emmy_lib = static_library(
    'emmyluacodestyle',
    emmy_sources,
    include_directories: emmy_inc,
    link_with: uri_lib,
    cpp_args: ['-DURI_STATIC_BUILD'],
    override_options: ['unity=off'],
    pic: true,
)

emmyluacodestyle_dep = declare_dependency(
    include_directories: include_directories('CodeFormatCLib/include'),
    link_with: emmy_lib,
)
